--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "editor.renderWhitespace": "all",
   "files.trimTrailingWhitespace": true,
   "editor.tabSize": 2,
+  "editor.fontSize": 24,
   "liveServer.settings.donotShowInfoMsg": true,
   "files.insertFinalNewline": true,
   "editor.formatOnSave": true,
